force-app/main/default/objects/AcctSeed__Financial_Cube_Transaction__c/AcctSeed__Financial_Cube_Transaction__c.object-meta.xml
<CustomObject>
    <description>Used to document the relationship between a transaction record and a financial cube record.</description>
    <label>Financial Cube Transaction</label>
    <nameField>
        <displayFormat>FCT-{00000}</displayFormat>
        <label>Financial Cube Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financial Cube Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>