force-app/main/default/objects/AcctSeed__Financial_Cube_Transaction__c/fields/AcctSeed__Account__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Account__c</fullName>
    <formula>AcctSeed__Transaction__r.AcctSeed__Account__r.Name</formula>
    <label>Account</label>
    <type>Text</type>
</CustomField>