force-app/main/default/objects/AcctSeed__Financial_Cube_Transaction__c/fields/AcctSeed__Contact__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Contact__c</fullName>
    <formula>AcctSeed__Transaction__r.AcctSeed__Contact__r.FirstName &amp; &quot; &quot; &amp; AcctSeed__Transaction__r.AcctSeed__Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact</label>
    <type>Text</type>
</CustomField>