force-app/main/default/objects/AcctSeed__Financial_Cube_Transaction__c/fields/AcctSeed__Employee__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Employee__c</fullName>
    <formula>AcctSeed__Transaction__r.AcctSeed__Employee__r.FirstName &amp; &quot; &quot; &amp;  AcctSeed__Transaction__r.AcctSeed__Employee__r.LastName</formula>
    <label>Employee</label>
    <type>Text</type>
</CustomField>