force-app/main/default/objects/AcctSeed__Financial_Cube_Transaction__c/fields/AcctSeed__Source__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Source__c</fullName>
    <formula>IF(NOT(ISBLANK( AcctSeed__Transaction__r.AcctSeed__AP_Disbursement__c )) ,&quot;AP Disbursement&quot;,
IF(NOT(ISBLANK( AcctSeed__Transaction__r.AcctSeed__Billing_Cash_Receipt__c )) ,&quot;Billing Cash Receipt&quot;,
IF(NOT(ISBLANK( AcctSeed__Transaction__r.AcctSeed__Billing_Line__c )) ,&quot;Billing&quot;,
IF(NOT(ISBLANK( AcctSeed__Transaction__r.AcctSeed__Account_Payable_Line__c )) ,&quot;Payable&quot;,
IF(NOT(ISBLANK( AcctSeed__Transaction__r.AcctSeed__Cash_Disbursement__c )) ,&quot;Cash Disbursement&quot;,
IF(NOT(ISBLANK( AcctSeed__Transaction__r.AcctSeed__Cash_Receipt__c )) ,&quot;Cash Receipt&quot;,
IF(NOT(ISBLANK( AcctSeed__Transaction__r.AcctSeed__Scheduled_Revenue_Expense__c )) ,&quot;Amortization Entry&quot;,
IF(NOT(ISBLANK( AcctSeed__Transaction__r.AcctSeed__Time_Card_Day__c )) ,&quot;Time Card&quot;,
IF(NOT(ISBLANK( AcctSeed__Transaction__r.AcctSeed__Journal_Entry_Line__c )) , &quot;Journal Entry&quot;,
&quot;&quot;)))))))))</formula>
    <label>Source</label>
    <type>Text</type>
</CustomField>